# pr-pilot

./: .gitignore  AGENTS.md  README.md  pr-pilot.toml.example  pyproject.toml
src/pr_pilot/: __init__.py  chatgpt.py  cli.py  commands.py  config.py  errors.py  git.py  github.py  memory.py  providers.py  state.py  telegram.py  workflow.py
tests/: test_chatgpt.py  test_cli.py  test_config.py  test_memory.py  test_providers.py  test_telegram.py  test_workflow.py
