[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-pilot"
version = "0.2.0"
description = "Ship reviewed pull requests with coding agents and local cross-project memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PR Pilot contributors" }]
dependencies = [
  "fastembed>=0.8,<0.9",
  "numpy>=1.26",
]

[project.scripts]
pr-pilot = "pr_pilot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
